hack for getting spring jars loaded on app boot